--- a/editable.html
+++ b/editable.html
@@ -365,8 +365,8 @@
         }
         }.silex-id-1439156721715-39 {
             width: 298px; 
-            top: 247px; 
-            left: -669px; 
+            top: 236px; 
+            left: 2px; 
             min-height: 32px; 
         }
         @media only screen and (max-width: 480px), only screen and (max-device-width: 480px){.silex-id-1439156721715-39 {
@@ -377,8 +377,8 @@
         }
         }.silex-id-1439156721312-35 {
             width: 298px; 
-            top: 247px; 
-            left: -337px; 
+            top: 236px; 
+            left: 2px; 
             min-height: 32px; 
         }
         @media only screen and (max-width: 480px), only screen and (max-device-width: 480px){.silex-id-1439156721312-35 {
@@ -389,7 +389,7 @@
         }
         }.silex-id-1439156720906-31 {
             width: 298px; 
-            top: 247px; 
+            top: 236px; 
             left: 2px; 
             min-height: 32px; 
         }
@@ -541,6 +541,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -548,7 +550,7 @@
     <!-- End of Silex HEAD tag do not remove -->
 </head>
 
-<body class="silex-id-1439156722930-51 enable-mobile silex-runtime" data-silex-type="container" data-silex-id="silex-id-1439156722930-51">
+<body class="silex-id-1439156722930-51 enable-mobile silex-runtime" data-silex-type="container" data-silex-id="silex-id-1439156722930-51" style="">
 
 
 
@@ -594,7 +596,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139730465-7 section-element website-min-width" data-silex-id="silex-id-1483139730465-7">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139730465-7 section-element website-min-width" data-silex-id="silex-id-1483139730465-7" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483139730465-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483139730465-6">
             <div class="editable-style image-element silex-id-1439156719679-19" data-silex-type="image" data-silex-id="silex-id-1439156719679-19"><img src="assets/fake-logo.png" class="silex-element-content">
             </div>
@@ -609,7 +611,7 @@
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139563582-5 section-element page-home paged-element website-min-width" data-silex-id="silex-id-1483139563582-5">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139563582-5 section-element page-home paged-element website-min-width" data-silex-id="silex-id-1483139563582-5" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483139563581-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483139563581-4">
 
 
@@ -649,7 +651,7 @@
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139324559-3 section-element page-home paged-element website-min-width" data-silex-id="silex-id-1483139324559-3">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139324559-3 section-element page-home paged-element website-min-width" data-silex-id="silex-id-1483139324559-3" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483139324558-2 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483139324558-2">
 
 
@@ -698,7 +700,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483140114350-8 page-products paged-element page-about page-contact website-min-width" data-silex-id="silex-id-1483140114350-8">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483140114350-8 page-products paged-element page-about page-contact website-min-width" data-silex-id="silex-id-1483140114350-8" style="">
 
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1483140114351-9" data-silex-id="silex-id-1483140114351-9">
 
@@ -711,7 +713,7 @@
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139189898-1 section-element website-min-width" data-silex-id="silex-id-1483139189898-1">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139189898-1 section-element website-min-width" data-silex-id="silex-id-1483139189898-1" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483139189897-0 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483139189897-0">
             <div class="editable-style image-element silex-id-1439156720299-25" data-silex-type="image" data-silex-href="https://twitter.com/silexlabs" data-silex-id="silex-id-1439156720299-25"><img class="silex-element-content" src="assets/bouton-twitter-bleu.png">
             </div>
@@ -727,12 +729,14 @@
             </div>
             <div data-silex-type="text" class="editable-style text-element abel silex-id-1439156720502-27" data-silex-id="silex-id-1439156720502-27">
                 <div class="silex-element-content">
-                    <p style="text-align: center;" class="normal"><span style="color: rgb(255, 255, 255); font-size: small;">Creative Commons template by <a href="http://lexoyo.me">@lexoyo</a></span><span style="color: rgb(255, 255, 255); font-size: small;">&nbsp; &nbsp; - &nbsp; &nbsp;Powered by <a href="http://www.silex.me">Silex</a></span>
+                    <p style="text-align: center;" class="normal"><span style="color: rgb(255, 255, 255); font-size: small;">Creative Commons template by <a href="//lexoyo.me">@lexoyo</a></span><span style="color: rgb(255, 255, 255); font-size: small;">&nbsp; &nbsp; - &nbsp; &nbsp;Powered by <a href="http://www.silex.me">Silex</a></span>
                     </p>
                 </div>
             </div>
         </div>
     </div>
+
+
 
 
 
