--- a/editable_James.html
+++ b/editable_James.html
@@ -532,6 +532,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -588,7 +590,7 @@
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483139730465-7 section-element website-min-width" data-silex-id="silex-id-1483139730465-7" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483139730465-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483139730465-6">
 
-            <div class="editable-style text-element nav silex-id-1439156722322-45 hide-on-mobile" data-silex-type="text" data-silex-id="silex-id-1439156722322-45" data-silex-href="#!page-syllabus">
+            <div class="editable-style text-element nav silex-id-1439156722322-45 hide-on-mobile" data-silex-type="text" data-silex-id="silex-id-1439156722322-45">
                 <div class="silex-element-content normal">
                     <div style="text-align: right;"><a class="page-link-active" href="#!page-home">Home</a><span><span>&nbsp; &nbsp; </span><a href="#!page-Syllabus">Syllabus &nbsp;&nbsp; </a></span><a class="" href="#!page-about">About</a><span>&nbsp;&nbsp;&nbsp; </span>
                         <a class="" href="#!page-contact">Contact us<span></span>
@@ -699,7 +701,7 @@
 
             <div data-silex-type="text" class="editable-style silex-id-1483140123370-22 text-element" data-silex-id="silex-id-1483140123370-22">
                 <div class="silex-element-content normal">
-                    <font size="4">To be added!</font>
+                    <font size="4">To be added! About</font>
                 </div>
             </div>
         </div>
@@ -726,6 +728,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
