--- a/editable.html
+++ b/editable.html
@@ -78,7 +78,6 @@
     <style class="silex-inline-styles" type="text/css">
         .silex-id-1436036524732-32 {
             cursor: auto; 
-            background-image: url('assets/bg-tile3.png'); 
             background-color: rgb(255, 255, 255); 
         }
         .silex-id-1483130857943-13 {
@@ -386,6 +385,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -393,11 +394,11 @@
     <!-- End of Silex HEAD tag do not remove -->
 </head>
 
-<body data-silex-type="container" class="silex-id-1436036524732-32 enable-mobile silex-runtime" data-silex-id="silex-id-1436036524732-32">
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483130857943-13 section-element small-height website-min-width" data-silex-id="silex-id-1483130857943-13">
+<body data-silex-type="container" class="silex-id-1436036524732-32 enable-mobile silex-runtime" data-silex-id="silex-id-1436036524732-32" style="">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483130857943-13 section-element small-height website-min-width" data-silex-id="silex-id-1483130857943-13" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483130857943-12 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483130857943-12"></div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483130355289-7 section-element website-min-width" data-silex-id="silex-id-1483130355289-7">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483130355289-7 section-element website-min-width" data-silex-id="silex-id-1483130355289-7" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483130355289-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483130355289-6">
             <div data-silex-type="container" class="editable-style container-element silex-id-1436036524531-30 page-link-active" data-silex-href="#!page-home" data-silex-id="silex-id-1436036524531-30">
                 <div data-silex-type="image" class="editable-style image-element silex-id-1436036524431-29" data-silex-id="silex-id-1436036524431-29">
@@ -424,7 +425,7 @@
 
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483131519736-31 section-element page-home paged-element website-min-width" data-silex-id="silex-id-1483131519736-31">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483131519736-31 section-element page-home paged-element website-min-width" data-silex-id="silex-id-1483131519736-31" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483131519736-30 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483131519736-30">
             <div data-silex-type="text" class="editable-style text-element silex-id-1436036524230-27" data-silex-id="silex-id-1436036524230-27">
                 <div class="silex-element-content normal">
@@ -438,7 +439,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483130397853-8 page-home paged-element website-min-width" data-silex-id="silex-id-1483130397853-8">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483130397853-8 page-home paged-element website-min-width" data-silex-id="silex-id-1483130397853-8" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1483130397854-9" data-silex-id="silex-id-1483130397854-9">
             <div data-silex-type="text" class="editable-style text-element full-width grey-text silex-id-1436036523928-24" data-silex-id="silex-id-1436036523928-24">
                 <div class="silex-element-content normal">
@@ -523,7 +524,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483131239726-14 page-home paged-element website-min-width" data-silex-id="silex-id-1483131239726-14">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483131239726-14 page-home paged-element website-min-width" data-silex-id="silex-id-1483131239726-14" style="">
 
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1483131239727-15" data-silex-id="silex-id-1483131239727-15">
             <div data-silex-type="text" class="editable-style text-element full-width grey-text silex-id-1483131239727-17" data-silex-id="silex-id-1483131239727-17">
@@ -558,7 +559,7 @@
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483131242514-19 page-home paged-element website-min-width" data-silex-id="silex-id-1483131242514-19">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483131242514-19 page-home paged-element website-min-width" data-silex-id="silex-id-1483131242514-19" style="">
 
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1483131242514-20" data-silex-id="silex-id-1483131242514-20">
             <div data-silex-type="text" class="editable-style text-element full-width grey-text silex-id-1483131242515-22" data-silex-id="silex-id-1483131242515-22">
@@ -594,7 +595,7 @@
         </div>
     </div>
 
-    <div data-silex-type="text" class="editable-style text-element silex-id-1447077029886-3 page-home paged-element page-page-1 right in-front hide-on-mobile" data-silex-id="silex-id-1447077029886-3">
+    <div data-silex-type="text" class="editable-style text-element silex-id-1447077029886-3 page-home paged-element page-page-1 right in-front hide-on-mobile" data-silex-id="silex-id-1447077029886-3" style="">
         <div class="silex-element-content normal">
             <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css">
             <!--[if lt IE 9]>
@@ -666,7 +667,7 @@
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483130400381-10 website-min-width" data-silex-id="silex-id-1483130400381-10">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483130400381-10 website-min-width" data-silex-id="silex-id-1483130400381-10" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1483130400382-11" data-silex-id="silex-id-1483130400382-11">
             <div data-silex-type="text" class="editable-style text-element full-width small-text silex-id-1436036522220-7" data-silex-id="silex-id-1436036522220-7">
                 <div class="silex-element-content normal">
@@ -677,6 +678,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
