--- a/editable_James.html
+++ b/editable_James.html
@@ -418,7 +418,7 @@
                 </div>
                 <div data-silex-type="text" class="editable-style text-element silex-id-1436036521917-4 page-link-active" data-silex-href="#!page-about" data-silex-id="silex-id-1436036521917-4">
                     <div class="silex-element-content normal">
-                        <div style="text-align: center;">CONTACT</div>
+                        <div style="text-align: center;">ABOUT</div>
                     </div>
                 </div>
             </div>
