--- a/editable_James.html
+++ b/editable_James.html
@@ -362,7 +362,7 @@
             <div data-silex-type="container" class="editable-style container-element silex-id-1436036524531-30 page-link-active" data-silex-href="#!page-home" data-silex-id="silex-id-1436036524531-30">
                 <div data-silex-type="image" class="editable-style image-element silex-id-1436036524431-29" data-silex-id="silex-id-1436036524431-29">
 
-                    <img src="Photos/myPhoto_384.jpg" class="silex-element-content"></div>
+                    <img src="Photos/myPhoto_384.jpg" class="circular--square"></div>
                 <div data-silex-type="text" class="editable-style text-element grey-text silex-id-1436036524330-28" data-silex-id="silex-id-1436036524330-28">
                     <div class="silex-element-content normal">
                         <h1 class="heading1">James Jehong Kim</h1>Optics Expertise at Philips Lighting Research North America
