--- a/editable_James.html
+++ b/editable_James.html
@@ -280,6 +280,9 @@
             min-height: 40px; 
             left: 367px; 
         }
+        .circular--square {
+            border-radius: 50%;
+        }
     </style>
 
     <script type="text/javascript" src="//editor.silex.me/static/2.7/jquery.js" data-silex-static=""></script>
