--- a/editable_James.html
+++ b/editable_James.html
@@ -280,6 +280,9 @@
             min-height: 40px; 
             left: 367px; 
         }
+        .circular--square {
+            border-radius: 50%;
+        }
     </style>
 
     <script type="text/javascript" src="//editor.silex.me/static/2.7/jquery.js" data-silex-static=""></script>
@@ -371,7 +374,7 @@
                         <div>jehong.kim@philips.com</div>
                     </div>
                 </div>
-                <div data-silex-type="image" class="editable-style silex-id-1487389932953-10 image-element page-home paged-element" data-silex-id="silex-id-1487389932953-10" style=""><img src="Photos/myPhoto_117.jpg" class="silex-element-content"></div>
+                <div data-silex-type="image" class="editable-style silex-id-1487389932953-10 image-element page-home paged-element" data-silex-id="silex-id-1487389932953-10" style=""><img src="Photos/myPhoto_117.jpg" class="circular--square"></div>
             </div>
             <div data-silex-type="container" class="editable-style container-element link-menu silex-id-1436036522119-6 hide-on-mobile" data-silex-id="silex-id-1436036522119-6">
                 <div data-silex-type="text" class="editable-style text-element silex-id-1436036522018-5 page-link-active" data-silex-href="#!page-home" data-silex-id="silex-id-1436036522018-5">
