--- a/editable_James.html
+++ b/editable_James.html
@@ -401,7 +401,7 @@
                 </div>
 
                 <div data-silex-type="image" class="editable-style silex-id-1487394551091-4 image-element page-home paged-element" data-silex-id="silex-id-1487394551091-4" style=""><img src="Photos/myphoto_round_BW.jpg" class="silex-element-content"></div>
-                <div data-silex-type="image" class="editable-style image-element silex-id-1487539135930-0 page-about paged-element" data-silex-id="silex-id-1487539135930-0" style=""><img src="Photos/myphoto_round.jpg" class="silex-element-content"></div>
+                <div data-silex-type="image" class="editable-style image-element silex-id-1487539135930-0 page-about paged-element" data-silex-id="silex-id-1487539135930-0" style=""><img src="Photos/myphoto_round_BW.jpg" class="silex-element-content"></div>
             </div>
             <div data-silex-type="container" class="editable-style container-element link-menu silex-id-1436036522119-6 hide-on-mobile" data-silex-id="silex-id-1436036522119-6">
                 <div data-silex-type="text" class="editable-style text-element silex-id-1436036522018-5 page-link-active" data-silex-href="#!page-home" data-silex-id="silex-id-1436036522018-5">
