--- a/editable_James.html
+++ b/editable_James.html
@@ -219,12 +219,32 @@
             top: 34px; 
             left: 55px; 
         }
-        .silex-id-1487388302659-5 {
+        .silex-id-1487540108762-2 {
             top: 670px; 
             left: 0px; 
         }
+        .silex-id-1487540108761-1 {
+            min-height: 287px; 
+            background-color: rgb(255, 255, 255); 
+        }
+        .silex-id-1487540218832-5 {
+            width: 978px; 
+            top: 22px; 
+            left: 1px; 
+            min-height: 26px; 
+        }
+        .silex-id-1487540144892-3 {
+            min-height: 120px; 
+            width: 400px; 
+            top: 64px; 
+            left: 46px; 
+        }
+        .silex-id-1487388302659-5 {
+            top: 767px; 
+            left: 0px; 
+        }
         .silex-id-1487388302658-4 {
-            min-height: 625px; 
+            min-height: 363px; 
             background-color: rgb(255, 255, 255); 
         }
         .silex-id-1487388322832-6 {
@@ -304,7 +324,7 @@
     <meta name="publicationPath" content="/api/1.0/github/exec/puthttps://github.com/jehkim/howtodesign/">
 
     <script class="silex-json-styles" type="text/javascript">
-        [{"desktop":{"silex-id-1436036524732-32":{"cursor":"auto","background-image":"","background-color":"rgb(255, 255, 255)"},"silex-id-1436036524531-30":{"width":"463px","top":"106px","left":"49px","background-color":"transparent","min-height":"141px"},"silex-id-1436036524330-28":{"width":"329px","top":"21px","left":"123px","min-height":"108px"},"silex-id-1436036524230-27":{"width":"822px","top":"130px","left":"100px","min-height":"181px"},"silex-id-1436036524129-26":{"width":"966px","top":"700px","left":"1px","background-color":"transparent","min-height":"528px"},"silex-id-1436036524028-25":{"width":"368px","top":"134px","left":"46px","min-height":"256px"},"silex-id-1436036523928-24":{"width":"978px","top":"22px","left":"1px","min-height":"26px"},"silex-id-1436036523827-23":{"width":"242px","top":"166px","left":"120px","min-height":"58px"},"silex-id-1436036523727-22":{"width":"362px","top":"235px","left":"61px","min-height":"86px"},"silex-id-1436036523626-21":{"width":"415px","top":"129px","left":"513px","min-height":"302px"},"silex-id-1436036523526-20":{"width":"100px","top":"1278px","left":"0px","background-color":"transparent","min-height":"528px"},"silex-id-1436036523425-19":{"width":"368px","top":"127px","left":"40px","min-height":"256px"},"silex-id-1436036523325-18":{"width":"100px","top":"16px","left":"0px","min-height":"26px"},"silex-id-1436036523224-17":{"width":"242px","top":"166px","left":"120px","min-height":"58px"},"silex-id-1436036523124-16":{"width":"362px","top":"235px","left":"61px","min-height":"86px"},"silex-id-1436036523024-15":{"width":"415px","top":"166px","left":"512px","min-height":"259px"},"silex-id-1436036522923-14":{"width":"100px","top":"1864px","background-color":"transparent","min-height":"528px"},"silex-id-1436036522823-13":{"width":"368px","top":"130px","left":"43px","min-height":"256px"},"silex-id-1436036522722-12":{"width":"100px","top":"16px","left":"0px","min-height":"26px"},"silex-id-1436036522622-11":{"width":"242px","top":"166px","left":"120px","min-height":"58px"},"silex-id-1436036522521-10":{"width":"362px","top":"240px","left":"61px","min-height":"86px"},"silex-id-1436036522421-9":{"width":"415px","top":"172px","left":"512px","min-height":"299px"},"silex-id-1436036522320-8":{"width":"100px","top":"2405px","min-height":"100px"},"silex-id-1436036522220-7":{"width":"238px","top":"17px","min-height":"40px","left":"367px"},"silex-id-1436036522119-6":{"width":"383px","top":"108px","left":"536px","background-color":"transparent","min-height":"100px"},"silex-id-1436036522018-5":{"width":"90px","top":"20px","left":"142px","min-height":"33px"},"silex-id-1436036521917-4":{"width":"90px","top":"20px","left":"238px","min-height":"33px"},"silex-id-1436036521816-3":{"width":"100px","top":"300px","left":"1px","background-color":"transparent","min-height":"528px"},"silex-id-1436036521716-2":{"width":"808px","top":"37px","left":"86px","min-height":"366px"},"silex-id-1483130355289-6":{"min-height":"331px","background-color":"transparent"},"silex-id-1483130355289-7":{"top":"10px","left":"0px"},"silex-id-1483130397853-8":{"top":"1220px","left":"0px"},"silex-id-1483130397854-9":{"min-height":"525px","background-color":"transparent"},"silex-id-1483130400381-10":{"top":"2236px","left":"0px"},"silex-id-1483130400382-11":{"min-height":"82px","background-color":"transparent"},"silex-id-1483130857943-12":{"min-height":"20px","background-color":"transparent"},"silex-id-1483130857943-13":{"top":"100px","left":"NaNpx","background-color":"rgba(180,229,232,1)"},"silex-id-1483131239727-15":{"min-height":"525px","background-color":"transparent"},"silex-id-1483131239727-16":{"width":"368px","top":"134px","left":"46px","min-height":"256px"},"silex-id-1483131239727-17":{"width":"978px","top":"22px","left":"1px","min-height":"26px"},"silex-id-1483131239727-18":{"width":"415px","top":"129px","left":"513px","min-height":"302px"},"silex-id-1483131242514-20":{"min-height":"525px","background-color":"transparent"},"silex-id-1483131242515-21":{"width":"368px","top":"134px","left":"46px","min-height":"256px"},"silex-id-1483131242515-22":{"width":"978px","top":"22px","left":"1px","min-height":"26px"},"silex-id-1483131242515-23":{"width":"415px","top":"129px","left":"513px","min-height":"302px"},"silex-id-1483131410736-25":{"top":"259px","left":"NaNpx"},"silex-id-1483131410737-26":{"min-height":"525px","background-color":"transparent"},"silex-id-1483131519736-30":{"min-height":"329px","background-color":"transparent"},"silex-id-1483131519736-31":{"top":"708px","left":"0px"},"silex-id-1487369803182-3":{"min-height":"338px","background-color":"rgb(255, 255, 255)"},"silex-id-1487369803183-4":{"top":"341px","left":"0px"},"silex-id-1487369830965-6":{"min-height":"200px","width":"319px","top":"34px","left":"55px"},"silex-id-1487388302658-4":{"min-height":"625px","background-color":"rgb(255, 255, 255)"},"silex-id-1487388302659-5":{"top":"670px","left":"0px"},"silex-id-1487388322832-6":{"width":"978px","top":"22px","left":"1px","min-height":"26px"},"silex-id-1487388383250-8":{"width":"415px","top":"129px","left":"513px","min-height":"302px"},"silex-id-1487391107248-14":{"min-height":"50px","width":"700px","top":"44px","left":"106px"},"silex-id-1487393265576-2":{"min-height":"368px","width":"368px","top":"134px","left":"46px"},"silex-id-1487394521611-3":{"min-height":"120px","width":"120px","top":"100px","left":"1px"},"silex-id-1487394551091-4":{"min-height":"120px","width":"120px","top":"7px","left":"1px"},"silex-id-1487539135930-0":{"min-height":"120px","width":"120px","top":"7px","left":"1px"}},"mobile":{"silex-id-1436036524230-27":{"top":"137px","left":"11px","width":"421px","min-height":"372px"},"silex-id-1483131410737-26":{"top":"0px","left":"12px","width":"445px","min-height":"791px"},"silex-id-1483131410736-25":{"top":"401px","left":"0px"},"silex-id-1483130397853-8":{"top":"730px","left":"0px"},"silex-id-1483131519736-31":{"top":"401px","left":"0px"},"silex-id-1483130355289-7":{"top":"70px","left":"0px"},"silex-id-1483131242515-23":{"top":"384px","left":"15px","width":"415px","min-height":"314px"},"silex-id-1483130355289-6":{"min-height":"218px"},"silex-id-1483131519736-30":{"min-height":"415px"},"silex-id-1483130397854-9":{"min-height":"767px"},"silex-id-1483131239727-15":{"min-height":"735px"},"silex-id-1483131242514-20":{"min-height":"718px"}},"componentData":{}}]
+        [{"desktop":{"silex-id-1436036524732-32":{"cursor":"auto","background-image":"","background-color":"rgb(255, 255, 255)"},"silex-id-1436036524531-30":{"width":"463px","top":"106px","left":"49px","background-color":"transparent","min-height":"141px"},"silex-id-1436036524330-28":{"width":"329px","top":"21px","left":"123px","min-height":"108px"},"silex-id-1436036524230-27":{"width":"822px","top":"130px","left":"100px","min-height":"181px"},"silex-id-1436036524129-26":{"width":"966px","top":"700px","left":"1px","background-color":"transparent","min-height":"528px"},"silex-id-1436036524028-25":{"width":"368px","top":"134px","left":"46px","min-height":"256px"},"silex-id-1436036523928-24":{"width":"978px","top":"22px","left":"1px","min-height":"26px"},"silex-id-1436036523827-23":{"width":"242px","top":"166px","left":"120px","min-height":"58px"},"silex-id-1436036523727-22":{"width":"362px","top":"235px","left":"61px","min-height":"86px"},"silex-id-1436036523626-21":{"width":"415px","top":"129px","left":"513px","min-height":"302px"},"silex-id-1436036523526-20":{"width":"100px","top":"1278px","left":"0px","background-color":"transparent","min-height":"528px"},"silex-id-1436036523425-19":{"width":"368px","top":"127px","left":"40px","min-height":"256px"},"silex-id-1436036523325-18":{"width":"100px","top":"16px","left":"0px","min-height":"26px"},"silex-id-1436036523224-17":{"width":"242px","top":"166px","left":"120px","min-height":"58px"},"silex-id-1436036523124-16":{"width":"362px","top":"235px","left":"61px","min-height":"86px"},"silex-id-1436036523024-15":{"width":"415px","top":"166px","left":"512px","min-height":"259px"},"silex-id-1436036522923-14":{"width":"100px","top":"1864px","background-color":"transparent","min-height":"528px"},"silex-id-1436036522823-13":{"width":"368px","top":"130px","left":"43px","min-height":"256px"},"silex-id-1436036522722-12":{"width":"100px","top":"16px","left":"0px","min-height":"26px"},"silex-id-1436036522622-11":{"width":"242px","top":"166px","left":"120px","min-height":"58px"},"silex-id-1436036522521-10":{"width":"362px","top":"240px","left":"61px","min-height":"86px"},"silex-id-1436036522421-9":{"width":"415px","top":"172px","left":"512px","min-height":"299px"},"silex-id-1436036522320-8":{"width":"100px","top":"2405px","min-height":"100px"},"silex-id-1436036522220-7":{"width":"238px","top":"17px","min-height":"40px","left":"367px"},"silex-id-1436036522119-6":{"width":"383px","top":"108px","left":"536px","background-color":"transparent","min-height":"100px"},"silex-id-1436036522018-5":{"width":"90px","top":"20px","left":"142px","min-height":"33px"},"silex-id-1436036521917-4":{"width":"90px","top":"20px","left":"238px","min-height":"33px"},"silex-id-1436036521816-3":{"width":"100px","top":"300px","left":"1px","background-color":"transparent","min-height":"528px"},"silex-id-1436036521716-2":{"width":"808px","top":"37px","left":"86px","min-height":"366px"},"silex-id-1483130355289-6":{"min-height":"331px","background-color":"transparent"},"silex-id-1483130355289-7":{"top":"10px","left":"0px"},"silex-id-1483130397853-8":{"top":"1220px","left":"0px"},"silex-id-1483130397854-9":{"min-height":"525px","background-color":"transparent"},"silex-id-1483130400381-10":{"top":"2236px","left":"0px"},"silex-id-1483130400382-11":{"min-height":"82px","background-color":"transparent"},"silex-id-1483130857943-12":{"min-height":"20px","background-color":"transparent"},"silex-id-1483130857943-13":{"top":"100px","left":"NaNpx","background-color":"rgba(180,229,232,1)"},"silex-id-1483131239727-15":{"min-height":"525px","background-color":"transparent"},"silex-id-1483131239727-16":{"width":"368px","top":"134px","left":"46px","min-height":"256px"},"silex-id-1483131239727-17":{"width":"978px","top":"22px","left":"1px","min-height":"26px"},"silex-id-1483131239727-18":{"width":"415px","top":"129px","left":"513px","min-height":"302px"},"silex-id-1483131242514-20":{"min-height":"525px","background-color":"transparent"},"silex-id-1483131242515-21":{"width":"368px","top":"134px","left":"46px","min-height":"256px"},"silex-id-1483131242515-22":{"width":"978px","top":"22px","left":"1px","min-height":"26px"},"silex-id-1483131242515-23":{"width":"415px","top":"129px","left":"513px","min-height":"302px"},"silex-id-1483131410736-25":{"top":"259px","left":"NaNpx"},"silex-id-1483131410737-26":{"min-height":"525px","background-color":"transparent"},"silex-id-1483131519736-30":{"min-height":"329px","background-color":"transparent"},"silex-id-1483131519736-31":{"top":"708px","left":"0px"},"silex-id-1487369803182-3":{"min-height":"338px","background-color":"rgb(255, 255, 255)"},"silex-id-1487369803183-4":{"top":"341px","left":"0px"},"silex-id-1487369830965-6":{"min-height":"200px","width":"319px","top":"34px","left":"55px"},"silex-id-1487388302658-4":{"min-height":"363px","background-color":"rgb(255, 255, 255)"},"silex-id-1487388302659-5":{"top":"767px","left":"0px"},"silex-id-1487388322832-6":{"width":"978px","top":"22px","left":"1px","min-height":"26px"},"silex-id-1487388383250-8":{"width":"415px","top":"129px","left":"513px","min-height":"302px"},"silex-id-1487391107248-14":{"min-height":"50px","width":"700px","top":"44px","left":"106px"},"silex-id-1487393265576-2":{"min-height":"368px","width":"368px","top":"134px","left":"46px"},"silex-id-1487394521611-3":{"min-height":"120px","width":"120px","top":"100px","left":"1px"},"silex-id-1487394551091-4":{"min-height":"120px","width":"120px","top":"7px","left":"1px"},"silex-id-1487539135930-0":{"min-height":"120px","width":"120px","top":"7px","left":"1px"},"silex-id-1487540108761-1":{"min-height":"287px","background-color":"rgb(255, 255, 255)"},"silex-id-1487540108762-2":{"top":"670px","left":"0px"},"silex-id-1487540144892-3":{"min-height":"120px","width":"400px","top":"134px","left":"46px"},"silex-id-1487540218832-5":{"width":"978px","top":"22px","left":"1px","min-height":"26px"}},"mobile":{"silex-id-1436036524230-27":{"top":"137px","left":"11px","width":"421px","min-height":"372px"},"silex-id-1483131410737-26":{"top":"0px","left":"12px","width":"445px","min-height":"791px"},"silex-id-1483131410736-25":{"top":"401px","left":"0px"},"silex-id-1483130397853-8":{"top":"730px","left":"0px"},"silex-id-1483131519736-31":{"top":"401px","left":"0px"},"silex-id-1483130355289-7":{"top":"70px","left":"0px"},"silex-id-1483131242515-23":{"top":"384px","left":"15px","width":"415px","min-height":"314px"},"silex-id-1483130355289-6":{"min-height":"218px"},"silex-id-1483131519736-30":{"min-height":"415px"},"silex-id-1483130397854-9":{"min-height":"767px"},"silex-id-1483131239727-15":{"min-height":"735px"},"silex-id-1483131242514-20":{"min-height":"718px"}},"componentData":{}}]
     </script>
 
     <meta data-silex-viewport="" content="width=device-width, initial-scale=1, maximum-scale=2.2" name="viewport">
@@ -548,6 +568,42 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487540108762-2 section-element page-home paged-element" data-silex-id="silex-id-1487540108762-2">
+        <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1487540108761-1 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1487540108761-1">
+            <div data-silex-type="text" class="editable-style text-element full-width grey-text silex-id-1487540218832-5" data-silex-id="silex-id-1487540218832-5" style="">
+                <div class="silex-element-content normal">
+                    <div style="text-align: center;">///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
+                </div>
+            </div>
+            <div data-silex-type="image" class="editable-style silex-id-1487540144892-3 image-element" data-silex-id="silex-id-1487540144892-3" style=""><img src="Photos/Week1.jpg" class="silex-element-content"></div>
+        </div>
+    </div>
     <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487388302659-5 section-element page-home paged-element" data-silex-id="silex-id-1487388302659-5">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1487388302658-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1487388302658-4">
             <div data-silex-type="text" class="editable-style text-element full-width grey-text silex-id-1487388322832-6" data-silex-id="silex-id-1487388322832-6" style="">
@@ -562,8 +618,8 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal">First class, always nervous! Meet instructor, students and Dorene at the classroom.</p>
-                        <h3 style="text-align: right;" class="heading3"><a href="#!page-week0" class="">MORE</a></h3>
+                        <p class="normal">First class, of course exciting with instructors, students and Dorene Maniccia presented success of lighting design and introduced Philips Lighting Research team.&nbsp;</p>
+                        <br>
                     </div>
                 </div>
             </div>
@@ -616,29 +672,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
