--- a/editable_James.html
+++ b/editable_James.html
@@ -659,13 +659,12 @@
 
             <div data-silex-type="text" class="editable-style text-element product-details silex-id-1436036523626-21" data-silex-id="silex-id-1436036523626-21">
                 <div class="silex-element-content normal">
-                    <h1 class="heading1">Project Name</h1>
+                    <h1 class="heading1">Title Name</h1>
                     <div>
                         <br>
                     </div>
                     <div>
-                        <p class="normal">Lorem ipsum dolor sit amet, consecteteur. A. Non viverra vehicula augue justo rutrum in. Varius at diam lacus ut bibendum. Mus fringilla primis maecenas penatibus a. Ac nisl ultrices eros, integer augue pede accumsan porttitor.
-                            Dapibus ante elit amet ante habitasse rutrum porta sed nibh.&nbsp;</p>
+                        <p class="normal">New text&nbsp;</p>
                         <p class="normal">
                             <br>
                         </p>
