--- a/editable_James.html
+++ b/editable_James.html
@@ -420,6 +420,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -618,12 +620,14 @@
 
             <div data-silex-type="text" class="editable-style text-element product-details silex-id-1487542794041-13" data-silex-id="silex-id-1487542794041-13" style="">
                 <div class="silex-element-content normal">
-                    <h1 class="heading1"><font size="6">Freedom of Design for Lighting</font></h1>
+                    <h1 class="heading1"><font size="6">Freedom of Design for Function</font></h1>
                     <div>
                         <br>
                     </div>
                     <div>
-                        <p class="normal">Technology of light source,</p>
+                        <p class="normal">Different types of light source form factor with color changing and control lighting are available in the market. Illumination design is getting more flexible and functional using the light source technologies compared to incandescent
+                            or fluorescent light source phasing out. I thought about how we are able to design products and illumination creating more comfortable ambience and controllable with the lighting technology. Obviously there are more freedom
+                            of lighting design and flexible in illumination, even beyond illumination.</p>
                     </div>
                 </div>
             </div>
@@ -714,6 +718,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
