--- a/index.html
+++ b/index.html
@@ -456,7 +456,9 @@
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483131519736-30 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483131519736-30">
             <div data-silex-type="text" class="editable-style text-element silex-id-1436036524230-27" data-silex-id="silex-id-1436036524230-27">
                 <div class="silex-element-content normal">
-                    <p class="normal"><font size="5">MIT Class, Wed 2-5pm</font></p>
+                    <p class="normal"><font size="5">Spring 2017, Wed 2-5pm + Lab <br></font></p>
+                    <p class="normal"><font size="5">Class Website: <a href="http://howtodesign.mit.edu/">http://howtodesign.mit.edu/</a></font></p>
+                    <p class="normal"><font size="5"><br></font></p>
                 </div>
             </div>
 
