--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                         <p class="normal">
                             <br>
                         </p>
-                        <h3 class="heading3">More</h3>
+                        <h3 class="heading3">Slider</h3>
                     </div>
                 </div>
             </div>
