--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal">Different types of light source form factor with color changing and control lighting are available in the market. Illumination design is getting more flexible and functional using the light source technologies compared to incandescent
+                        <p class="normal">Different types of light source form factors with color changing and control lighting are available in the market. Illumination design is getting more flexible and functional using the light source technologies compared to incandescent
                             or fluorescent light source phasing out. I thought about how we are able to design products and illumination creating more comfortable ambience and controllable with the lighting technology. Obviously more freedom of lighting
                             design in illumination, even beyond illumination.</p>
                         <p class="normal">
