--- a/editable_James.html
+++ b/editable_James.html
@@ -410,6 +410,10 @@
 
 
 
+
+
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -454,7 +458,9 @@
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483131519736-30 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483131519736-30">
             <div data-silex-type="text" class="editable-style text-element silex-id-1436036524230-27" data-silex-id="silex-id-1436036524230-27">
                 <div class="silex-element-content normal">
-                    <p class="normal"><font size="5">MIT Class, Wed 2-5pm</font></p>
+                    <p class="normal"><font size="5">Spring 2017, Wed 2-5pm + Lab <br></font></p>
+                    <p class="normal"><font size="5">Class Website: <a href="//howtodesign.mit.edu/">http://howtodesign.mit.edu/</a></font></p>
+                    <p class="normal"><font size="5"><br></font></p>
                 </div>
             </div>
 
@@ -598,7 +604,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487542525806-9 section-element page-home paged-element" data-silex-id="silex-id-1487542525806-9">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487542525806-9 section-element page-home paged-element" data-silex-id="silex-id-1487542525806-9" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1487542525805-8 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1487542525805-8">
             <div data-silex-type="text" class="editable-style text-element full-width grey-text silex-id-1487542550395-10" data-silex-id="silex-id-1487542550395-10" style="">
                 <div class="silex-element-content normal">
@@ -613,19 +619,19 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal">Different types of light source form factor with color changing and control lighting are available in the market. Illumination design is getting more flexible and functional using the light source technologies compared to incandescent
+                        <p class="normal">Different types of light source form factors with color changing and control lighting are available in the market. Illumination design is getting more flexible and functional using the light source technologies compared to incandescent
                             or fluorescent light source phasing out. I thought about how we are able to design products and illumination creating more comfortable ambience and controllable with the lighting technology. Obviously more freedom of lighting
                             design in illumination, even beyond illumination.</p>
                         <p class="normal">
                             <br>
                         </p>
-                        <h3 class="heading3">More</h3>
+                        <h3 class="heading3">Slider</h3>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487540108762-2 section-element page-home paged-element" data-silex-id="silex-id-1487540108762-2">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487540108762-2 section-element page-home paged-element" data-silex-id="silex-id-1487540108762-2" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1487540108761-1 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1487540108761-1">
             <div data-silex-type="text" class="editable-style text-element full-width grey-text silex-id-1487540218832-5" data-silex-id="silex-id-1487540218832-5" style="">
                 <div class="silex-element-content normal">
@@ -644,7 +650,7 @@
             </div>
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487388302659-5 section-element page-home paged-element" data-silex-id="silex-id-1487388302659-5">
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487388302659-5 section-element page-home paged-element" data-silex-id="silex-id-1487388302659-5" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1487388302658-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1487388302658-4">
             <div data-silex-type="text" class="editable-style text-element full-width grey-text silex-id-1487388322832-6" data-silex-id="silex-id-1487388322832-6" style="">
                 <div class="silex-element-content normal">
@@ -706,6 +712,10 @@
             </div>
         </div>
     </div>
+
+
+
+
 
 
 
