--- a/editable_James.html
+++ b/editable_James.html
@@ -619,9 +619,11 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal">Different types of light source form factors with color changing and control lighting are available in the market. Illumination design is getting more flexible and functional using the light source technologies compared to incandescent
-                            or fluorescent light source phasing out. I thought about how we are able to design products and illumination creating more comfortable ambience and controllable with the lighting technology. Obviously more freedom of lighting
-                            design in illumination, even beyond illumination.</p>
+                        <p class="normal">Since Solid-State Lighting (SSL) has made significant improvements, different types of light source form factors with color changing and control lighting are available in the market. With more options to choose a light source of
+                            SSL, the illumination design is getting more flexible and functional compared to incandescent or fluorescent light source phasing out. I thought about how we are able to design products and illumination creating more comfortable
+                            ambience and controllable with the lighting technology. Obviously there would be more freedom of lighting design in illumination, even beyond illumination.
+                            <br>
+                        </p>
                         <p class="normal">
                             <br>
                         </p>
