--- a/Slider_20170222_v4.html
+++ b/Slider_20170222_v4.html
@@ -8,8 +8,8 @@
 <body>
   <div id="slides">
     <div class="slides-container">
-      <img src="slide1.jpg">
-      <img src="slide2.jpg">
+      <img src="slide1.jpg" width="1024" height="682">
+      <img src="slide2.jpg" width="1024" height="682">
     </div>
 
     <nav class="slides-navigation">
