--- a/Slider_20170222_v4.html
+++ b/Slider_20170222_v4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Superslides - A fullscreen slider for jQuery</title>
-  <link rel="stylesheet" href="https://jehkim.github.io/howtodesign/dist/stylesheets/superslides.css">
+  <link rel="stylesheet" href="https://github.com/jehkim/howtodesign/master/dist/stylesheets/superslides.css">
 </head>
 <body>
   <div id="slides">
@@ -19,9 +19,9 @@
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="https://jehkim.github.io/howtodesign/javascripts/jquery.easing.1.3.js"></script>
-  <script src="https://jehkim.github.io/howtodesign/javascripts/jquery.animate-enhanced.min.js"></script>
-  <script src="https://jehkim.github.io/howtodesign/dist/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://github.com/jehkim/howtodesign/master//javascripts/jquery.easing.1.3.js"></script>
+  <script src="https://github.com/jehkim/howtodesign/master/javascripts/jquery.animate-enhanced.min.js"></script>
+  <script src="https://github.com/jehkim/howtodesign/master/dist/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
   <script>
     $('#slides').superslides({
       animation: 'fade'
