--- a/Slider_20170222_v4.html
+++ b/Slider_20170222_v4.html
@@ -19,9 +19,9 @@
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="javascripts/jquery.easing.1.3.js"></script>
-  <script src="javascripts/jquery.animate-enhanced.min.js"></script>
-  <script src="dist/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://github.com/jehkim/howtodesign/edit/master/javascripts/jquery.easing.1.3.js"></script>
+  <script src="https://github.com/jehkim/howtodesign/edit/master/javascripts/jquery.animate-enhanced.min.js"></script>
+  <script src="https://github.com/jehkim/howtodesign/edit/master/dist/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
   <script>
     $('#slides').superslides({
       animation: 'fade'
