--- a/examples/fade.html
+++ b/examples/fade.html
@@ -8,8 +8,10 @@
 <body>
   <div id="slides">
     <div class="slides-container">
-      <img src="slide1.jpg" width="1024" height="682">
-      <img src="slide2.jpg" width="1024" height="682">
+      <img src="images/people.jpeg" alt="Cinelli">
+      <img src="images/surly.jpeg" width="1024" height="682" alt="Surly">
+      <img src="images/cinelli-front.jpeg" width="1024" height="683" alt="Cinelli">
+      <img src="images/affinity.jpeg" width="1024" height="685" alt="Affinity">
     </div>
 
     <nav class="slides-navigation">
