--- a/editable_James.html
+++ b/editable_James.html
@@ -620,7 +620,7 @@
                 </div>
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1487637544478-0 html-element" data-silex-id="silex-id-1487637544478-0" style="">
-                <div class="silex-element-content"><a href="examples/fade.html" target="_blank">here</a></div>
+                <div class="silex-element-content"><a href="https://jehkim.github.io/howtodesign/examples/fade.html" target="_blank">here</a></div>
             </div>
         </div>
     </div>
