--- a/Slider_20170222_v5.html
+++ b/Slider_20170222_v5.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-      <img src="slide1.jpg" style="width: 100%">
+      <img src="slide1.jpg" style="height: 100%">
 
 </body>
 </html>
