--- a/Slider_20170222_v5.html
+++ b/Slider_20170222_v5.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<body>
+<center>
+      <body>
       <img src="slide1.jpg" style="width: 70%">
-
-</body>
+      </body>
+</center>
 </html>
