--- a/Slider_20170222_v5.html
+++ b/Slider_20170222_v5.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<center>
-      <body>
-      <img src="slide1.jpg" style="width: 70%">
-      </body>
-</center>
+<body>
+      <center><img src="slide1.jpg" style="width: 70%"></center>
+</body>
 </html>
