--- a/editable_James.html
+++ b/editable_James.html
@@ -615,12 +615,12 @@
                         <p class="normal">
                             <br>
                         </p>
-                        <h3 class="heading3">Slider</h3>
+                        <h3 class="heading3"><a href="https://jehkim.github.io/howtodesign/Slider_20170222_v5.html">Slider</a></h3>
                     </div>
                 </div>
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1487637544478-0 html-element" data-silex-id="silex-id-1487637544478-0" style="">
-                <div class="silex-element-content"><a href="https://jehkim.github.io/howtodesign/examples/fade.html" target="_blank">here</a></div>
+                <div class="silex-element-content"><a href="https://jehkim.github.io/howtodesign/Slider_20170222_v5.html" target="_blank">here</a></div>
             </div>
         </div>
     </div>
