--- a/editable_James.html
+++ b/editable_James.html
@@ -608,7 +608,7 @@
                         <p class="normal">
                             <br>
                         </p>
-                        <h3 class="heading3"><a href="https://jehkim.github.io/howtodesign/Slider_20170222_v5.html">Slider</a></h3>
+                        <h3 class="heading3"><a href="https://jehkim.github.io/howtodesign/Slider_20170222_v5.html" target="_balnk">Slider</a></h3>
                     </div>
                 </div>
             </div>
