--- a/Slider_20170222_v5.html
+++ b/Slider_20170222_v5.html
@@ -7,7 +7,7 @@
 <body>
       <div>
       <center>
-            <img class="mySlides" src="slide1.jpg" style="width:70%" align=middle>
+            <img class="mySlides" src="slide1.jpg" style="width:70%" align="middle">
             <img class="mySlides" src="slide2.jpg" style="width: 70%">
       </center>
 
