--- a/Slider_20170222_v4.html
+++ b/Slider_20170222_v4.html
@@ -1,31 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Superslides - A fullscreen slider for jQuery</title>
-  <link rel="stylesheet" href="https://github.com/jehkim/howtodesign/edit/master/dist/stylesheets/superslides.css">
-</head>
+
 <body>
-  <div id="slides">
-    <div class="slides-container">
-      <img src="slide1.jpg" width="1024" height="682">
-      <img src="slide2.jpg" width="1024" height="682">
-    </div>
+      <img src="slide1.jpg" style="width: 100%">
 
-    <nav class="slides-navigation">
-      <a href="#" class="next">Next</a>
-      <a href="#" class="prev">Previous</a>
-    </nav>
-  </div>
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="https://github.com/jehkim/howtodesign/edit/master/javascripts/jquery.easing.1.3.js"></script>
-  <script src="https://github.com/jehkim/howtodesign/edit/master/javascripts/jquery.animate-enhanced.min.js"></script>
-  <script src="https://github.com/jehkim/howtodesign/edit/master/dist/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
-  <script>
-    $('#slides').superslides({
-      animation: 'fade'
-    });
-  </script>
 </body>
 </html>
