--- a/Slider_20170222_v5.html
+++ b/Slider_20170222_v5.html
@@ -9,8 +9,7 @@
       <center>
             <p><br></p>
             <img class="mySlides" src="slide1.jpg" style="width:70%" align="middle">
-            <img class="mySlides" src="slide2.jpg" style="width: 70%">
-            <iframe src="http://player.vimeo.com/video/158171934?portrait=0" width="740" height="416" frameborder="0"></iframe>
+            <a href="http://player.vimeo.com/video/158171934?portrait=0" target="_blank"><img class="mySlides" src="slide2.jpg" style="width: 70%"></a>
       </center>
 
       <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
