--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -233,14 +233,6 @@
             min-height: 306px; 
             background-color: rgb(255, 255, 255); 
         }
-        .silex-id-1487388302659-5 {
-            top: 1088px; 
-            left: 0px; 
-        }
-        .silex-id-1487388302658-4 {
-            min-height: 559px; 
-            background-color: rgb(255, 255, 255); 
-        }
         .silex-id-1483130400381-10 {
             top: 2236px; 
             left: 0px; 
@@ -355,6 +347,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -400,7 +394,7 @@
             <div data-silex-type="text" class="editable-style text-element silex-id-1436036524230-27" data-silex-id="silex-id-1436036524230-27">
                 <div class="silex-element-content normal">
                     <p class="normal"><font size="5">Spring 2017, Wed 2-5pm + Lab <br></font></p>
-                    <p class="normal"><font size="5">Class Website: <a href="http://howtodesign.mit.edu/">howtodesign.mit.edu</a></font></p>
+                    <p class="normal"><font size="5">Class Website: <a href="//howtodesign.mit.edu/">howtodesign.mit.edu</a></font></p>
                     <p class="normal"><font size="5"><br></font></p>
                 </div>
             </div>
@@ -588,14 +582,7 @@
 
         </div>
     </div>
-    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1487388302659-5 section-element page-home paged-element" data-silex-id="silex-id-1487388302659-5" style="">
-        <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1487388302658-4 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1487388302658-4">
 
-
-
-
-        </div>
-    </div>
 
     <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1483130400381-10 website-min-width" data-silex-id="silex-id-1483130400381-10" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1483130400382-11" data-silex-id="silex-id-1483130400382-11">
@@ -608,6 +595,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
