--- a/editable_James.html
+++ b/editable_James.html
@@ -617,7 +617,7 @@
                         </p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Slider linked below is to present the timeline of lighting source of incandescent, fluorescent and LEDs that quickly replace the old types of light and have a lot of benefits. Selected two examples,
                             one is a case for beyond illumination, information display lighting design using Philips iColor Flex at Northeastern University, Boston, MA. Another is an example of LED lighting product design which is flexible and versatile
-                            from <a href="http://www.designledproducts.com">designledproducts.com</a>. It could be interesting to see how it is unique in design for function.
+                            from <a href="http://www.designledproducts.com" target="_blank">designledproducts.com</a>. It could be interesting to see how it is unique in design for function.
                             <br>
                         </p>
                         <p class="normal">
